# ace-step-1.5-replicate

./: .dockerignore  .gitignore  README.md  cog.yaml  predict.py  pyproject.toml  requirements.txt
.github/workflows/: push.yaml
